syntax = "proto3";
package fx.migrate.v1;

import "fx/migrate/v1/migrate.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/pundiai/fx-core/v8/x/migrate/types";

// Query provides defines the gRPC querier service.
service Query {
  // DenomTrace queries a denomination trace information.
  rpc MigrateRecord(QueryMigrateRecordRequest)
      returns (QueryMigrateRecordResponse) {
    option (google.api.http).get = "/fx/migrate/v1/record/{address}";
  }

  rpc MigrateCheckAccount(QueryMigrateCheckAccountRequest)
      returns (QueryMigrateCheckAccountResponse) {
    option (google.api.http).get = "/fx/migrate/v1/check/account";
  }
}

message QueryMigrateRecordRequest { string address = 1; }

message QueryMigrateRecordResponse {
  // has migrate true-> migrated, false-> not migrated.
  bool found = 1;
  // migrateRecord defines the the migrate record.
  MigrateRecord migrate_record = 2 [ (gogoproto.nullable) = false ];
}

message QueryMigrateCheckAccountRequest {
  // migrate from address
  string from = 1;
  // migrate to address
  string to = 2;
}

message QueryMigrateCheckAccountResponse {}
